[package]
name = "buildtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.16", features = ["rt", "macros"] }
anyhow = "1.0"
bollard = {git = "https://github.com/fussybeaver/bollard.git"}
tar = "0.4"
flate2 = "1.0"
async-channel = "1.6"